--- a/components/go-msgwrvhx/overlays/development/deployment-patch.yaml
+++ b/components/go-msgwrvhx/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-msgwrvhx
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/go-msgwrvhx:2eb70072f8024aa6df3dc4727db60d4815a4e80f@sha256:471240bf1315325503bf7c14e0a5a6208d95bd60bbdba63b3ae32cd9be37038a
+          name: container-image
